--- a/PricingTable/index.html
+++ b/PricingTable/index.html
@@ -12,22 +12,42 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="pricing-section container border border-primary h-50 w-50">
+  <div class="hero  d-flex justify-content-start  align-items-center">
+    <div class="pricing-section container border-primary w-75 h-75">
         <h1 class="pricing-headfont-weight-bold text-center">PRICING</h1>
-        <p class="prcing-infolead">Following are our pricing plans.These involve free and paid plans choose according to your need. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquam natus dicta excepturi id nihil molestiae maiores.</p>
-        <div class="pricing-table container h-50">
-            <div class="row border">
-              <div class="col-sm free-plan border">
-                free
+        <p class="pricing-infolead text-center ">Following are our pricing plans.These involve free and paid plans choose according to your need. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquam natus dicta excepturi id nihil molestiae maiores.</p>
+        <div class="pricing-table container h-75">
+            <div class="row h-100 justify-content-between w-100">
+              <div class="col-sm free-plan border h-100 text-center m-2 p-0">
+                <h4 class="border w-100 text-center">FREE</h4>
+                <li class="" >$0 / mo</li>
+                <li class="">10 users included</li>
+                <li class="">2 GB of storage</li>
+              <li class="">Email support</li>
+              <li class="">Help center access</li>
+              <button class="w-75 bg-danger text-white">Get Started</button>
               </div>
-              <div class="col-sm basic-plan border">
-                basic
+              <div class="col-sm basic-plan border text-center m-2 p-0">
+                <h4 class="border w-100 text-center">BASIC</h4>
+                <li>$15 / mo</li>
+                <li>20 users included</li>
+                <li>10 GB of storage</li>
+                <li>Priority email support</li>
+                <li>Help center access</li>
+                <button class="w-75 bg-danger bg-gradient-primary text-white">Buy Now</button>
               </div>
-              <div class="col-sm pro-plan border">
-                pro
+              <div class="col-sm pro-plan border text-center m-2 p-0">
+                <h4 class="border w-100 text-center">PRO</h4>
+                <li>$29 / mo</li>
+                <li class="bg-secondary text-white">30 users included</li>
+                <li>15 GB of storage</li>
+                <li class="bg-secondary text-white">Phone and email support</li>
+                <li>Help center access</li>
+                <button class="w-75 bg-danger text-white">Buy Now</button>
               </div>
             </div>
           </div>
     </div>
+  </div>
 </body>
 </html>
