--- a/PricingTable/index.html
+++ b/PricingTable/index.html
@@ -17,33 +17,33 @@
         <h1 class="pricing-headfont-weight-bold text-center">PRICING</h1>
         <p class="pricing-infolead text-center ">Following are our pricing plans.These involve free and paid plans choose according to your need. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquam natus dicta excepturi id nihil molestiae maiores.</p>
         <div class="pricing-table container h-75">
-            <div class="row h-100 justify-content-between w-100">
-              <div class="col-sm free-plan border h-100 text-center m-2 p-0">
-                <h4 class="border w-100 text-center">FREE</h4>
+            <div class="container row h-100 justify-content-between w-100">
+              <div class="row col-sm free-plan border border-dark h-100 text-center m-2 p-0 justify-content-between shadow-sm bg-white rounded">
+                <h4 class="border-bottom border-dark w-100 text-center justify-content-between">FREE</h4>
                 <li class="" >$0 / mo</li>
-                <li class="">10 users included</li>
+                <li class="bg-secondary text-white text-center">10 users included</li>
                 <li class="">2 GB of storage</li>
-              <li class="">Email support</li>
+              <li class="bg-secondary text-white">Email support</li>
               <li class="">Help center access</li>
-              <button class="w-75 bg-danger text-white">Get Started</button>
+              <button class="bg-danger text-white">Get Started</button>
               </div>
-              <div class="col-sm basic-plan border text-center m-2 p-0">
-                <h4 class="border w-100 text-center">BASIC</h4>
+              <div class="row col-sm basic-plan border border-dark text-center m-2 p-0 shadow-sm bg-white rounded">
+                <h4 class="border-bottom border-dark w-100 text-center">BASIC</h4>
                 <li>$15 / mo</li>
-                <li>20 users included</li>
+                <li class="bg-secondary text-white">20 users included</li>
                 <li>10 GB of storage</li>
-                <li>Priority email support</li>
+                <li class="bg-secondary text-white">Priority email support</li>
                 <li>Help center access</li>
-                <button class="w-75 bg-danger bg-gradient-primary text-white">Buy Now</button>
+                <button class="bg-danger bg-gradient-primary text-white">Buy Now</button>
               </div>
-              <div class="col-sm pro-plan border text-center m-2 p-0">
-                <h4 class="border w-100 text-center">PRO</h4>
+              <div class="row col-sm pro-plan border border-dark text-center m-2 p-0 shadow-sm bg-white rounded">
+                <h4 class="border-bottom border-dark w-100 text-center">PRO</h4>
                 <li>$29 / mo</li>
                 <li class="bg-secondary text-white">30 users included</li>
                 <li>15 GB of storage</li>
                 <li class="bg-secondary text-white">Phone and email support</li>
                 <li>Help center access</li>
-                <button class="w-75 bg-danger text-white">Buy Now</button>
+                <button class="bg-danger text-white">Buy Now</button>
               </div>
             </div>
           </div>
