--- a/PricingTable/index.html
+++ b/PricingTable/index.html
@@ -12,38 +12,38 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="hero  d-flex justify-content-start  align-items-center">
-    <div class="pricing-section container border-primary w-75 h-75">
-        <h1 class="pricing-headfont-weight-bold text-center">PRICING</h1>
-        <p class="pricing-infolead text-center ">Following are our pricing plans.These involve free and paid plans choose according to your need. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquam natus dicta excepturi id nihil molestiae maiores.</p>
-        <div class="pricing-table container h-75">
-            <div class="container row h-100 justify-content-between w-100">
-              <div class="row col-sm free-plan border border-dark h-100 text-center m-2 p-0 justify-content-between shadow-sm bg-white rounded">
-                <h4 class="border-bottom border-dark w-100 text-center justify-content-between">FREE</h4>
-                <li class="" >$0 / mo</li>
-                <li class="bg-secondary text-white text-center">10 users included</li>
-                <li class="">2 GB of storage</li>
-              <li class="bg-secondary text-white">Email support</li>
-              <li class="">Help center access</li>
+  <div class="hero d-flex flex-column align-items-center border-primary border">
+    <!-- <div class="pricing-section border-primary border"> -->
+        <h1 class="pricing-head font-weight-bold text-center">PRICING</h1>
+        <div class="border d-flex align-items-center justify-content-center"><p class="pricing-infolead text-center border w-75">Following are our pricing plans.These involve free and paid plans choose according to your need. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquam natus dicta excepturi id nihil molestiae maiores.</p></div>
+        <div class="pricing-table h-75 border container">
+            <div class="h-100 border row">
+              <div class="col free-plan border border-dark h-100 text-center m-2 p-0 justify-content-between shadow-sm bg-white rounded">
+                <h4 class="border-bottom border-dark w-100 text-center d-flex align-items-center justify-content-center">FREE</h4>
+                <li class="d-flex align-items-center justify-content-center" >$0 / mo</li>
+                <li class="bg-secondary text-white text-center d-flex align-items-center justify-content-center">10 users included</li>
+                <li class="d-flex align-items-center justify-content-center">2 GB of storage</li>
+              <li class="bg-secondary text-white d-flex align-items-center justify-content-center">Email support</li>
+              <li class="d-flex align-items-center justify-content-center">Help center access</li>
               <button class="bg-danger text-white">Get Started</button>
               </div>
-              <div class="row col-sm basic-plan border border-dark text-center m-2 p-0 shadow-sm bg-white rounded">
-                <h4 class="border-bottom border-dark w-100 text-center">BASIC</h4>
-                <li>$15 / mo</li>
-                <li class="bg-secondary text-white">20 users included</li>
-                <li>10 GB of storage</li>
-                <li class="bg-secondary text-white">Priority email support</li>
-                <li>Help center access</li>
+              <div class="col h-100 basic-plan border border-dark text-center m-2 p-0 shadow-sm bg-white rounded">
+                <h4 class="border-bottom border-dark w-100 text-center d-flex align-items-center justify-content-center">BASIC</h4>
+                <li class="d-flex align-items-center justify-content-center">$15 / mo</li>
+                <li class="bg-secondary text-white d-flex align-items-center justify-content-center">20 users included</li>
+                <li class="d-flex align-items-center justify-content-center">10 GB of storage</li>
+                <li class="bg-secondary text-white d-flex align-items-center justify-content-center">Priority email support</li>
+                <li class="d-flex align-items-center justify-content-center">Help center access</li>
                 <button class="bg-danger bg-gradient-primary text-white">Buy Now</button>
               </div>
-              <div class="row col-sm pro-plan border border-dark text-center m-2 p-0 shadow-sm bg-white rounded">
-                <h4 class="border-bottom border-dark w-100 text-center">PRO</h4>
-                <li>$29 / mo</li>
-                <li class="bg-secondary text-white">30 users included</li>
-                <li>15 GB of storage</li>
-                <li class="bg-secondary text-white">Phone and email support</li>
-                <li>Help center access</li>
-                <button class="bg-danger text-white">Buy Now</button>
+              <div class="col h-100 pro-plan border border-dark text-center m-2 p-0 shadow-sm bg-white rounded">
+                <h4 class="border-bottom border-dark w-100 text-center d-flex align-items-center justify-content-center">PRO</h4>
+                <li class="d-flex align-items-center justify-content-center">$29 / mo</li>
+                <li class="bg-secondary text-white d-flex align-items-center justify-content-center">30 users included</li>
+                <li class="d-flex align-items-center justify-content-center">15 GB of storage</li>
+                <li class="bg-secondary text-white d-flex align-items-center justify-content-center">Phone and email support</li>
+                <li class="d-flex align-items-center justify-content-center">Help center access</li>
+                <button class="bg-danger text-white font-weight-bold">Buy Now</button>
               </div>
             </div>
           </div>
